// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveDoc Preuve Fichier 1`] = `
<div
  data-test="item"
>
  <div
    className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
  >
    <div
      className="flex gap-2"
    >
      <a
        className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
        data-test="name"
        href="/"
        onClick={[Function]}
      >
        preuve_input.txt (TXT, 34 o)
      </a>
    </div>
    <div
      className="invisible group-hover:visible"
    >
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-edit-line"
        onClick={[Function]}
        title="Renommer"
      />
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
        onClick={[Function]}
        title="Décrire"
      />
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Supprimer"
      />
    </div>
  </div>
  <p
    className="text-xs fr-text-mention--grey mb-1 pl-2"
  >
    Ajouté
     le 
    06 sept. 2022
     par 
    Yolo Dodo
  </p>
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveDoc Preuve Fichier Commentee 1`] = `
<div
  data-test="item"
>
  <div
    className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
  >
    <div
      className="flex gap-2"
    >
      <a
        className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
        data-test="name"
        href="/"
        onClick={[Function]}
      >
        preuve_input.txt (TXT, 34 o)
      </a>
    </div>
    <div
      className="invisible group-hover:visible"
    >
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-edit-line"
        onClick={[Function]}
        title="Renommer"
      />
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
        onClick={[Function]}
        title="Décrire"
      />
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Supprimer"
      />
    </div>
  </div>
  <p
    className="text-xs fr-text-mention--grey mb-1 pl-2"
    data-test="comment"
    onClick={[Function]}
  >
    Cf pp 34-35 - Document provisoire, en attente d’approbation
  </p>
  <p
    className="text-xs fr-text-mention--grey mb-1 pl-2"
  >
    Ajouté
     le 
    06 sept. 2022
     par 
    Yolo Dodo
  </p>
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveDoc Preuve Lien 1`] = `
<div
  data-test="item"
>
  <div
    className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
  >
    <div
      className="flex gap-2"
    >
      <a
        className="fr-text--sm fr-mb-1v fr-fi-links-fill fr-link--icon-left"
        data-test="name"
        href="/"
        onClick={[Function]}
      >
        dodo
      </a>
    </div>
    <div
      className="invisible group-hover:visible"
    >
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
        onClick={[Function]}
        title="Décrire"
      />
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Supprimer"
      />
    </div>
  </div>
  
  <p
    className="text-xs fr-text-mention--grey mb-1 pl-2"
  >
    Ajouté
     le 
    06 sept. 2022
     par 
    Yolo Dodo
  </p>
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveDoc Preuve Lien Commentee 1`] = `
<div
  data-test="item"
>
  <div
    className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
  >
    <div
      className="flex gap-2"
    >
      <a
        className="fr-text--sm fr-mb-1v fr-fi-links-fill fr-link--icon-left"
        data-test="name"
        href="/"
        onClick={[Function]}
      >
        dodo
      </a>
    </div>
    <div
      className="invisible group-hover:visible"
    >
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
        onClick={[Function]}
        title="Décrire"
      />
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Supprimer"
      />
    </div>
  </div>
  <p
    className="text-xs fr-text-mention--grey mb-1 pl-2"
    data-test="comment"
    onClick={[Function]}
  >
    Cf pp 34-35 - Document provisoire, en attente d’approbation
  </p>
  <p
    className="text-xs fr-text-mention--grey mb-1 pl-2"
  >
    Ajouté
     le 
    06 sept. 2022
     par 
    Yolo Dodo
  </p>
</div>
`;
